[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/sprite/tank_w4/6.png" type="Texture" id=1]
[ext_resource path="res://assets/sprite/tank_w4/7.png" type="Texture" id=2]
[ext_resource path="res://assets/sprite/tank_w4/2.png" type="Texture" id=3]
[ext_resource path="res://assets/sprite/tank_w4/4.png" type="Texture" id=4]
[ext_resource path="res://assets/sprite/tank_w4/5.png" type="Texture" id=5]
[ext_resource path="res://assets/sprite/tank_w4/1.png" type="Texture" id=6]
[ext_resource path="res://assets/sprite/tank_w4/3.png" type="Texture" id=7]
[ext_resource path="res://assets/sprite/tank_w4/0.png" type="Texture" id=8]
[ext_resource path="res://src/Enemy.gd" type="Script" id=9]
[ext_resource path="res://assets/sprite/spawn1.png" type="Texture" id=10]
[ext_resource path="res://assets/sprite/spawn2.png" type="Texture" id=11]
[ext_resource path="res://assets/sprite/spawn3.png" type="Texture" id=12]
[ext_resource path="res://assets/sprite/spawn4.png" type="Texture" id=13]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 31, 31 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 6 ) ],
"loop": true,
"name": "0Up",
"speed": 10.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 7 ) ],
"loop": true,
"name": "0Left",
"speed": 10.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "0Down",
"speed": 10.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "0Right",
"speed": 10.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 12 ), ExtResource( 11 ) ],
"loop": true,
"name": "Spawn",
"speed": 5.0
} ]

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 0
script = ExtResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 1.2, 1.2 )
frames = SubResource( 2 )
animation = "0Down"

[node name="RayCastTopLeft" type="RayCast2D" parent="."]
position = Vector2( -25, 30 )
enabled = true
cast_to = Vector2( 0, -70 )
collision_mask = 27

[node name="RayCastTopRight" type="RayCast2D" parent="."]
position = Vector2( 25, 30 )
enabled = true
cast_to = Vector2( 0, -70 )
collision_mask = 27

[node name="RayCastBottomLeft" type="RayCast2D" parent="."]
position = Vector2( -25, -30 )
enabled = true
cast_to = Vector2( 0, 70 )
collision_mask = 27

[node name="RayCastBottomRight" type="RayCast2D" parent="."]
position = Vector2( 25, -30 )
enabled = true
cast_to = Vector2( 0, 70 )
collision_mask = 27

[node name="RayCastLeftTop" type="RayCast2D" parent="."]
position = Vector2( 30, -25 )
enabled = true
cast_to = Vector2( -70, 0 )
collision_mask = 27

[node name="RayCastLeftBottom" type="RayCast2D" parent="."]
position = Vector2( 30, 25 )
enabled = true
cast_to = Vector2( -70, 0 )
collision_mask = 27

[node name="RayCastRightTop" type="RayCast2D" parent="."]
position = Vector2( -30, -25 )
enabled = true
cast_to = Vector2( 70, 0 )
collision_mask = 27

[node name="RayCastRightBottom" type="RayCast2D" parent="."]
position = Vector2( -30, 25 )
enabled = true
cast_to = Vector2( 70, 0 )
collision_mask = 27

[node name="Cannon" type="Position2D" parent="."]
position = Vector2( 0, 32 )

[node name="ShootTimer" type="Timer" parent="."]

[node name="SpawnTimer" type="Timer" parent="."]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
